@@ -4,3 +4,6 @@
 .description_splash { display:none; }
 .description_wrap { display:none; }
 .data_wrap { display:none; }
+
+.overlay				{padding-bottom:80px;}
+
