@@ -18,7 +18,7 @@ a:active				{color:rgba(46,46,46,1);}
 /*	Main wrappers for content & fixed background img
 	============================================= */
 .main_wrap				{background-color:rgba(255,255,255,1);}
-.overlay				{background-color:rgba(246,246,246,1);}
+.overlay				{background-color:rgba(246,246,246,1); padding-bottom:80px;}
 .center_wrap			{width:962px;}
 
 
