@@ -621,7 +621,7 @@ FAQ
 Attribution &amp; Data Sources
 
 #footer19_text
-Github Feedback Forum
+Code licensed under MIT
 
 #footer20_text
 Database Logs
@@ -655,6 +655,9 @@ Documentation and FAQ
 
 #footer30_text
 If you have any queries about how the data is shown in d-portal, or how up to date the data is, please see the <b><a href="https://docs.d-portal.org/en/latest/">FAQ</a></b> or contact the IATI support helpdesk
+
+#footer31_text
+© Copyright 2025 United Nations Development Programme, on behalf of the IATI Secretariat.
 
 #read_more_text
 About data quality and why it matters
