@@ -94,21 +94,19 @@ This test instance of d-portal number <span class="beige_key">{beige_instance_ke
 		</div>
 	</div>
 	<div class="footer_wrap footer_white">
-
+		<div class="footer">
+			<div class="footer_link footer_block nunito-sans-600">
+				{large_footer_links}
+			</div>
+		</div>
 		<div class="footer_line"></div>
 		<div class="footer">
-			<div class=" footer_link footer_copy nunito-sans-600 footer_stats">
-				
-				<div><a href="https://preview.d-portal.org/upload" class="iati_tool_list_link">d-preview - Preview your data</a></div>
-				<div><a href="{ctrack_prefix}/dquery" class="iati_tool_list_link">Dquery - A read-only SQL interface</a></div>
-				<div><a href="#view=generator" class="iati_tool_list_link">Generator widgets for your website</a></div>
-				<div><a href="#view=dash" class="iati_tool_list_link">Dash - Organisation statistics</a></div>
-				<div><a href="https://xriss.github.io/D-Portal-Logs/" class="iati_tool_list_link">Database Logs</a></div>
-				<div><a href="https://github.com/IATI/D-Portal" class="iati_tool_list_link">Code licensed under MIT.</a></div>
-				<div>© Copyright 2025 United Nations Development Programme, on behalf of the IATI Secretariat.</div>
-				<div>{base_stats_text}</div>
-			
+			<div class="footer_link footer_block footer_stats nunito-sans-600">
+				{large_footer_info}
 			</div>
+		</div>
+		<div class="footer_line"></div>
+		<div class="footer">
 			<div class="footer_link footer_block footer_copy nunito-sans-600">
 				<a href="https://iatistandard.org/en/privacy-policy/">{footer27_text}</a>
 				<div>{footer28_text}</div>
@@ -123,17 +121,20 @@ This test instance of d-portal number <span class="beige_key">{beige_instance_ke
 #large_footer_links
 <div class="footer_header hanken-grotesk-700">{footer25_text}</div>
 <ul>
+	<li><a href="https://preview.d-portal.org/upload">{footer24_text}</a></li>
 	<li><a href="{ctrack_prefix}/dquery">{footer23_text}</a></li>
-	<li><a href="https://preview.d-portal.org/">{footer24_text}</a></li>
-	<li><a href="https://github.com/devinit/D-Portal/issues">{footer19_text}</a></li>
+	<li><a href="#view=generator">{footer15_text}</a></li>
+	<li><a href="#view=dash">{footer14_text}</a></li>
+	<li><a href="https://xriss.github.io/D-Portal-Logs/">{footer20_text}</a></li>
+	<li><a href="https://github.com/devinit/D-Portal/">{footer19_text}</a></li>
 </ul>
 
 #large_footer_info
 <div class="footer_header hanken-grotesk-700">{footer26_text}</div>
-{footer6_text} {footer7_text}
-<p>{footer8_text}</p>
+{footer31_text}
+<p>{base_stats_text}</p>
 {publisher_slug&&footer_publisher_link||}
-<p>{footer30_text} <a href="mailto:support@iatistandard.org?subject=Regarding%20d-portal.org">{footer11_text}</a></p>
+
 
 #footer_publisher_link
 <p>{footer21_text} <a href="https://www.iatiregistry.org/publisher/{publisher_slug}">{footer22_text}</a></p>
