@@ -1,3 +1,9 @@
+Development Portal (2025-09-01 shi)
+==============================
+Fix footer with Useful and Additional sections
+Fix padding for SAVi with new footer
+
+
 Development Portal (2025-08-27 shi)
 ==============================
 Fix dquery css
